<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.kc.mobileacademy.LoginActivity">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        style="@style/Toolbar"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mobileakademiwhite" />

        <com.kc.WidgetKC.MenuKCTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="22sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <!--<ScrollView-->
        <!--android:id="@+id/login_form"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emaillayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:visibility="visible"
                    android:alpha="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:visibility="visible"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:alpha="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <com.kc.WidgetKC.ButtonBoldType
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@color/mobile_academy_green"
                android:text="@string/button_login"
                android:textSize="19sp"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/ic_emaillogin"
                />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="52dp"

                android:paddingLeft="-3dp"
                android:paddingRight="-3dp"
                android:layout_gravity="center"


                />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textSize="17sp"
                />


            <com.kc.WidgetKC.ButtonBoldType
                android:id="@+id/register_with_email_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAllCaps="false"
                android:layout_marginTop="72dp"
                android:background="@drawable/firstuser_button_background"
                android:textColor="#ffffff"
                android:textSize="19sp"
                android:text="@string/button_register_with_email"
                android:textStyle="bold"
                android:paddingRight="24dp"
                android:drawableLeft="@drawable/ic_registeruser"
                android:layout_gravity="center_horizontal" />







        </LinearLayout>
    <!--</ScrollView>-->
        </LinearLayout>
</LinearLayout>